# Jelly4Krrish2

./: README.md  app.json  bot.py  pyproject.toml  replit_zip_error_log.txt  requirements.txt  runtime.txt  sample_config.py  script.py
database/: filters_mdb.py
plugins/: callbacks.py  commands.py  filters.py  forcesub.py
