[tool.poetry]
name = "repl_nix_Jelly4Krrish"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
config = "^0.5.1"
Flask = "^2.2.2"
heroku3 = "^5.1.4"
pymongo = "^4.2.0"
Pyrogram = "^2.0.43"

[tool.poetry.dev-dependencies]
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
